--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   // 插件的版本
   "version": "1.0.0",
   // 插件描述
-  "description": "必应/谷歌/百度隐藏footer",
+  "description": "必应/谷歌/百度隐藏footer，必应首页隐藏今日热点",
   // 图标，一般偷懒全部用一个尺寸的也没问题
   "icons": {
     "16": "img/logo.jpg",
@@ -21,14 +21,19 @@
     {
       //"matches": ["http://*/*", "https://*/*"],
       // "<all_urls>" 表示匹配所有地址
-      "matches": [
-        "https://cn.bing.com/*",
-        "https://www.google.com.hk/*",
-        "https://www.baidu.com/",
-        "https://baidu.com/",
-        "https://www.baidu.com/?tn=baiduhome_pg"
-      ],
+      "matches": ["https://cn.bing.com/*", "https://www.google.com.hk/*", "https://www.baidu.com/?tn=baiduhome_pg"],
       "js": ["custom.js"],
+      "run_at": "document_start"
+    },
+
+    {
+      "matches": ["https://www.baidu.com/", "https://baidu.com/"],
+      "js": ["custom2.js"],
+      "run_at": "document_start"
+    },
+    {
+      "matches": ["https://cn.bing.com/*"],
+      "js": ["custom3.js"],
       "run_at": "document_start"
     }
   ],
